# tippelaget

./: .gitignore  README.md  app.py  data.xlsx  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
.streamlit/: config.toml
tippelaget/: __init__.py
tippelaget-web/: .gitignore  README.md
tippelaget-web/api/: .dockerignore  Dockerfile  assistants_logic.py  chart_compute.py  cognite_data.py  main.py  settings.py
tippelaget-web/frontend/: env.example  index.html  package.json  vite.config.ts
tippelaget-web/frontend/src/: App.tsx  api.ts  index.css  types.ts
tippelaget-web/frontend/src/components/: AnimatedPlayerLineEndDots.tsx  AppShell.tsx  ChartFrame.tsx  EventsModal.tsx  PlayerLineDot.tsx  WorkflowBar.tsx
tippelaget-web/frontend/src/lib/: apiBase.ts  chartUtils.ts  formatNumbers.ts
tippelaget-web/frontend/src/pages/: AssistantsPage.tsx  MetricsPage.tsx
tippelaget/core/: client.py  config.py  data.py
tippelaget/ui/: __init__.py  plotting.py
tippelaget/views/: __init__.py  assistants.py  metrics.py
